[project]
name = "azx"
version = "0.1.7"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.12.0",
    "markdown-it-py>=3.0.0",
    "markitdown>=0.1.2",
    "openai>=1.99.6",
    "prompt-toolkit>=3.0.51",
    "pyyaml>=6.0.2",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "socksio>=1.0.0",
]

[project.scripts]
azx = "azx:main"
